fix image overflow

--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -21,15 +21,18 @@
 }
 .product>.product_img {
     display: flex;
-    height: 40%;
-    width: 100%;
-    object-fit: contain;
+    height: 35%;
+    object-fit: contain; 
     margin: 5%;
+    align-items: center;
 }
+
 
 .product>.product_img>img {
     width: 100%;
+    height: 100%;
 }
+
 .product_info {
     height: 40%;
     margin-bottom: 1%;
@@ -83,6 +86,7 @@
 
 .product_price{
     margin-top: 1%;
+    margin-bottom: 0;
 }
 
 .product_rating {
